[gd_scene load_steps=6 format=3 uid="uid://bnbrrwsan0s8t"]

[ext_resource type="Script" uid="uid://bc4ccau673pe4" path="res://UserTypes/parent_user.gd" id="1_aonsj"]
[ext_resource type="Texture2D" uid="uid://cpkupd8fu521a" path="res://Textures/Icons/ArrowLeft.png" id="2_aoa3f"]
[ext_resource type="Theme" uid="uid://bjnrclusr2ax4" path="res://Themes/taskrewardbuttons.tres" id="2_pxdnp"]
[ext_resource type="Texture2D" uid="uid://dmsmel3whhgfw" path="res://Textures/Icons/Home.webp" id="3_aoa3f"]
[ext_resource type="Texture2D" uid="uid://bbrgecpb6ip56" path="res://Textures/Icons/ArrowRight.png" id="3_bljjv"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aonsj")

[node name="Tasks_Rewards" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 316.0
offset_right = 3790.0
offset_bottom = 2216.0
theme_override_constants/separation = 50

[node name="VBoxContainer2" type="VBoxContainer" parent="Tasks_Rewards"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Tasks_Rewards/VBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Tasks_Rewards/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 948)
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Tasks_Rewards/VBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="LeftButton" type="TextureButton" parent="Tasks_Rewards/VBoxContainer2/VBoxContainer/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(528, 0)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("2_aoa3f")
texture_pressed = ExtResource("2_aoa3f")
texture_hover = ExtResource("2_aoa3f")
texture_disabled = ExtResource("2_aoa3f")
texture_focused = ExtResource("2_aoa3f")
stretch_mode = 0

[node name="ChildPhoto" type="TextureRect" parent="Tasks_Rewards/VBoxContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(701, 0)
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer2" type="MarginContainer" parent="Tasks_Rewards/VBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="RightButton" type="TextureButton" parent="Tasks_Rewards/VBoxContainer2/VBoxContainer/HBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(528, 0)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("3_bljjv")
texture_pressed = ExtResource("3_bljjv")
texture_hover = ExtResource("3_bljjv")
texture_disabled = ExtResource("3_bljjv")
texture_focused = ExtResource("3_bljjv")
stretch_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Tasks_Rewards/VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ChildName" type="Label" parent="Tasks_Rewards/VBoxContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_font_sizes/font_size = 100
text = "Name"

[node name="Age" type="Label" parent="Tasks_Rewards/VBoxContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_font_sizes/font_size = 100
text = "Age"

[node name="PointCount" type="Label" parent="Tasks_Rewards/VBoxContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_font_sizes/font_size = 100
text = "Points: 0"

[node name="TasksAndRewards" type="VBoxContainer" parent="Tasks_Rewards"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Tasks" type="VBoxContainer" parent="Tasks_Rewards/TasksAndRewards"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="TaskName" type="LineEdit" parent="Tasks_Rewards/TasksAndRewards/Tasks"]
layout_mode = 2
theme = ExtResource("2_pxdnp")
placeholder_text = "Task Name"

[node name="Points_AddTask" type="HBoxContainer" parent="Tasks_Rewards/TasksAndRewards/Tasks"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 15

[node name="PointCount" type="LineEdit" parent="Tasks_Rewards/TasksAndRewards/Tasks/Points_AddTask"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_pxdnp")
placeholder_text = "Points"

[node name="AddTask" type="Button" parent="Tasks_Rewards/TasksAndRewards/Tasks/Points_AddTask"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme = ExtResource("2_pxdnp")
text = "Add Task"

[node name="Tasks" type="ScrollContainer" parent="Tasks_Rewards/TasksAndRewards/Tasks"]
custom_minimum_size = Vector2(0, 670)
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 2
vertical_scroll_mode = 3

[node name="Tasks" type="VBoxContainer" parent="Tasks_Rewards/TasksAndRewards/Tasks/Tasks"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Rewards" type="VBoxContainer" parent="Tasks_Rewards/TasksAndRewards"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="RewardName" type="LineEdit" parent="Tasks_Rewards/TasksAndRewards/Rewards"]
layout_mode = 2
theme = ExtResource("2_pxdnp")
placeholder_text = "Reward Name"

[node name="Price_AddReward" type="HBoxContainer" parent="Tasks_Rewards/TasksAndRewards/Rewards"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 15

[node name="Price" type="LineEdit" parent="Tasks_Rewards/TasksAndRewards/Rewards/Price_AddReward"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_pxdnp")
placeholder_text = "Price"

[node name="AddReward" type="Button" parent="Tasks_Rewards/TasksAndRewards/Rewards/Price_AddReward"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
theme = ExtResource("2_pxdnp")
text = "Add Reward"

[node name="HBoxContainer" type="HBoxContainer" parent="Tasks_Rewards/TasksAndRewards/Rewards"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="RewardTypeButton" type="OptionButton" parent="Tasks_Rewards/TasksAndRewards/Rewards/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_pxdnp")
item_count = 3
popup/item_0/text = "Normal"
popup/item_0/id = 0
popup/item_1/text = "Timer"
popup/item_1/id = 1
popup/item_2/text = "Experience"
popup/item_2/id = 2

[node name="TimerDuration" type="LineEdit" parent="Tasks_Rewards/TasksAndRewards/Rewards/HBoxContainer"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
theme = ExtResource("2_pxdnp")
placeholder_text = "Minutes"

[node name="Rewards" type="ScrollContainer" parent="Tasks_Rewards/TasksAndRewards/Rewards"]
custom_minimum_size = Vector2(0, 547)
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 2
vertical_scroll_mode = 3

[node name="Rewards" type="VBoxContainer" parent="Tasks_Rewards/TasksAndRewards/Rewards/Rewards"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 3790.0
offset_bottom = 250.0

[node name="Home" type="TextureButton" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 2
action_mode = 0
texture_normal = ExtResource("3_aoa3f")
texture_pressed = ExtResource("3_aoa3f")
texture_hover = ExtResource("3_aoa3f")
texture_focused = ExtResource("3_aoa3f")
ignore_texture_size = true
stretch_mode = 5

[connection signal="pressed" from="HBoxContainer/Home" to="." method="_on_home_pressed"]
